Actions
Bug #11996
closedformat: modify should not ask for GPT partition 7
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
minor 7 is 'wd' for GPT, denoting whole disk.
Testing done: used format -> partition -> modify command, it did not prompt for slice 7 any more.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a64e1e23aa6dde2e865402bb20dde999f835fdc5
commit a64e1e23aa6dde2e865402bb20dde999f835fdc5 Author: Toomas Soome <tsoome@me.com> Date: 2019-11-26T15:13:52.000Z 11996 format: modify should not ask for GPT partition 7 Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions